# crewai-changelog-tldr

./: README.md
tldr-option1/: .gitignore  README.md  insights.md  pyproject.toml  tldr.md
tldr-option1/knowledge/: community_template.md  insights_template.md  issue_template.md  release_template.md  tldr_template.md  tldr_template2.md
tldr-option1/src/releases/: crew.py  main.py
tldr-option1/src/releases/config/: agents.yaml  tasks.yaml
