[project]
name = "releases"
version = "0.1.1"
description = "Community status report for community members using crewAI"
authors = [{ name = "Tony Wood", email = "tony@tonywood.org" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
releases = "releases.main:run"
run_crew = "releases.main:run"
train = "releases.main:train"
replay = "releases.main:replay"
test = "releases.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/releases"]

[tool.crewai]
type = "crew"
